# options-strategy-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_bwb_scan_demo.py  test_run.py
data/flat/: aapl_chain_flat.csv
data/raw/: chains_AAPL.json
scripts/: run_aapl_bwb.py  run_bwb_scan.py  sanity_check.py
src/options_strategy_lab/: __init__.py  data_loader.py  filters.py  scoring.py  strategies.py
src/options_strategy_lab.egg-info/: SOURCES.txt
tests/: test_bwb.py  test_filters.py  test_payoff.py
